fixed menu alignment in chrome/ff

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,7 +34,9 @@
 }
 
 #mainsectiontable th {
+ 	width: 700px;
     background-color: #cfcfcf
+	
 }
 
 #mainsectiontable td {
